Project

General

Profile

Actions

Bug #39546

closed

Warning about past_interval bounds on deleting pg

Added by Samuel Just almost 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
mimic, nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

cluster [ERR] 4.7
required past_interval bounds are empty [228,226) but past_intervals is not: ([166,225]
all_participants=1,3,5 intervals=([166,182] acting 1,3),([183,225] acting 3,5))

This pg took long enough to be deleted that the oldest stored map ended up past les. I think the simple fix is for check_past_interval_bounds to just not warn if deleting.


Related issues 4 (0 open4 closed)

Related to RADOS - Bug #37509: require past_interval bounds mismatch due to osd oldest_mapCan't reproduce

Actions
Has duplicate Ceph - Bug #41176: required past_interval bounds are empty .. but past_intervals is notDuplicate08/09/2019

Actions
Copied to RADOS - Backport #41502: mimic: Warning about past_interval bounds on deleting pgResolvedNathan CutlerActions
Copied to RADOS - Backport #41503: nautilus: Warning about past_interval bounds on deleting pgResolvedNathan CutlerActions
Actions #1

Updated by Samuel Just almost 5 years ago

sjust-2019-04-26_14:00:33-rados-wip-sjust-peering-refactor-distro-basic-mira/3897200/

Actions #2

Updated by Brad Hubbard almost 5 years ago

  • Project changed from Ceph to RADOS
Actions #3

Updated by Samuel Just almost 5 years ago

  • Assignee deleted (Samuel Just)
Actions #4

Updated by Neha Ojha almost 5 years ago

  • Related to Bug #37509: require past_interval bounds mismatch due to osd oldest_map added
Actions #5

Updated by Kefu Chai over 4 years ago

  • Has duplicate Bug #41176: required past_interval bounds are empty .. but past_intervals is not added
Actions #6

Updated by Kefu Chai over 4 years ago

/kchai-2019-08-12_14:45:48-rados-wip-kefu-testing-2019-08-12-1306-distro-basic-mira/4211285/

Actions #7

Updated by Sage Weil over 4 years ago

/a/sage-2019-08-19_13:35:06-rados-wip-sage-testing-2019-08-17-1023-distro-basic-smithi/4230273

Actions #8

Updated by Sage Weil over 4 years ago

  • Pull request ID set to 29747
Actions #9

Updated by Kefu Chai over 4 years ago

  • Status changed from New to Pending Backport
  • Backport set to mimic, nautilus
Actions #10

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41502: mimic: Warning about past_interval bounds on deleting pg added
Actions #11

Updated by Nathan Cutler over 4 years ago

  • Copied to Backport #41503: nautilus: Warning about past_interval bounds on deleting pg added
Actions #12

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF